[package]
name = "cdn-publish"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["cli"]

[workspace.dependencies]
rstest = "0.22.0"
secret_rs = { git = "ssh://git@git.tools.mia-platform.eu/platform/runtime/libraries/secrets/secret-rs.git", tag = "v0.3.0" }
typed-builder = "0.19.1"
url = "2.5.2"

[dependencies]
backon = "0.5.0"
base16ct = { version = "0.2.0", features = ["alloc"] }
bytes = "1.7.1"
cdn_publish_cli.path = "cli"
futures = "0.3.30"
human_format = "1.1.0"
mime = "0.3.17"
reqwest = { version = "0.12.5", features = ["stream"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sha2 = "0.10.8"
tabled = "0.16.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
typed-builder.workspace = true

[dev-dependencies]
assert_fs = "1.1.2"
rstest.workspace = true
secret_rs.workspace = true
uuid = { version = "1.10.0", features = ["v4"] }
